add makefile and swagger
